--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.4",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "jest",
