--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.1.4",
   "type": "module",
+  "homepage": "https://hayesashby.github.io/",
   "scripts": {
     "dev": "vite --force",
     "build": "tsc && vite build",
